# stargaze-sites

./: Cargo.toml  README.md
.circleci/: config.yml
contracts/sg-sites/: Cargo.toml  README.md
contracts/sg-sites/schema/: sg-sites.json
contracts/sg-sites/src/: contract.rs  error.rs  integration_tests.rs  lib.rs  msg.rs  state.rs  sudo.rs
scripts/: .env.example  01-store.sh  03-init_minter.sh  05-init_wl.sh  08-init_sites.sh  README.md  exec_create_site.sh  exec_mint.sh  query_site.sh  query_sites.sh
ts/: codegen.ts
ts/src/: NameMarketplace.recoil.ts  NameMinter.recoil.ts  Sg721Name.recoil.ts  Sites.client.ts  Sites.message-composer.ts  Sites.recoil.ts  Sites.types.ts  index.ts
